--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "lodash": "~3.10.x",
     "mkdirp": "~0.5.0",
     "tingodb": "~0.4.1",
-    "mongoose": "3.6.x"
+    "mongodb": "1.4.x",
   },
   "scripts": {
 		"test":"mocha ./test/*.test.js"
   },
   "devDependencies": {
-      "mongodb": "1.4.x",
-      "mocha":"1.21.x"
+      "mocha":"1.21.x",
+      "mongoose": "3.6.x"
   }
 }
