--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lodash": "~3.10.x",
     "mkdirp": "~0.5.0",
     "tingodb": "~0.4.1",
-    "mongodb": "1.4.x",
+    "mongodb": "1.4.x"
   },
   "scripts": {
 		"test":"mocha ./test/*.test.js"
