--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "safe": "~0.3.0",
     "lodash": "~3.10.x",
     "mkdirp": "~0.5.0",
-    "tingodb": "~0.4.1",
+    "tingodb": "github:root-core/tingodb#fully_patched",
     "mongodb": "1.4.x"
   },
   "scripts": {
-		"test":"mocha ./test/*.test.js"
+    "test":"mocha ./test/*.test.js"
   },
   "devDependencies": {
-      "mocha":"1.21.x",
-      "mongoose": "3.6.x"
+    "mocha":"1.21.x",
+    "mongoose": "3.6.x"
   }
 }
