--- a/package.json
+++ b/package.json
@@ -37,18 +37,18 @@
     "node": ">= v0.8.x"
   },
   "dependencies": {
-    "safe": "~0.4.x",
     "lodash": "~4.17.x",
     "mkdirp": "~0.5.x",
-    "tingodb": "~0.5.x",
-    "mongodb": "~3.0.x"
+    "mongodb": "^3.0.4",
+    "safe": "^0.4.6",
+    "tingodb": "~0.5.x"
   },
   "scripts": {
     "test": "mocha ./test/*.test.js"
   },
   "devDependencies": {
-    "mocha": "~5.0.x",
-    "mongoose": "~4.13.x",
+    "mocha": "^5.0.4",
+    "mongoose": "^5.0.10",
     "tungus": "."
   }
 }
